RESOLVED FIXED59180
REGRESSION (r83397): Default controls fade out when playing audio-only media
https://bugs.webkit.org/show_bug.cgi?id=59180
Summary REGRESSION (r83397): Default controls fade out when playing audio-only media
mitz
Reported 2011-04-22 00:39:38 PDT
<rdar://problem/9322486> To reproduce, either open the URL as a standalone media document, or open data:text/html,<audio controls src="http://www.synthogy.com/demo/v2/Chopin%20op.25%20no.11.mp3"></audio> when the audio is playing and the mouse is away from the controls, they fade out. This should not happen for audio. Caused by <http://trac.webkit.org/changeset/83397>
Attachments
Only start fading out the controls if there is a video track (3.45 KB, patch)
2011-04-22 01:24 PDT, mitz
mjs: review+
mitz
Comment 1 2011-04-22 01:12:51 PDT
Working on a test now (the fix is trivial).
mitz
Comment 2 2011-04-22 01:24:58 PDT
Created attachment 90678 [details] Only start fading out the controls if there is a video track
Maciej Stachowiak
Comment 3 2011-04-22 01:28:58 PDT
Comment on attachment 90678 [details] Only start fading out the controls if there is a video track r=me
mitz
Comment 4 2011-04-22 01:32:31 PDT
WebKit Review Bot
Comment 5 2011-04-22 09:00:07 PDT
http://trac.webkit.org/changeset/84611 might have broken Windows 7 Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.