<rdar://problem/9322486> REGRESSION (r83397): Default controls fade out when playing audio-only media https://bugs.webkit.org/show_bug.cgi?id=59180

Reviewed by Maciej Stachowiak.

Source/WebCore:

Test: media/audio-controls-do-not-fade-out.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::playbackProgressTimerFired): Only start fading out the controls if there is
a video track.

LayoutTests:

* media/audio-controls-do-not-fade-out-expected.txt: Added.
* media/audio-controls-do-not-fade-out.html: Added.



Canonical link: https://commits.webkit.org/74346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84611 268f45cc-cd09-0410-ab3c-d52691b4dbfc